// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generate a basic model 1`] = `
"import type { CombinedInstructions } from "blade-compiler";
import type { ReducedFunction, ResultRecord } from "blade-syntax/queries";
export type Account = import("blade/types").Account;
export type Accounts = import("blade/types").Accounts;
type AccountSyntax<S> = ReducedFunction & {
    <T = S>(options?: Partial<CombinedInstructions>): T;
    after: <T = S>(value: CombinedInstructions["after"]) => T;
    before: <T = S>(value: CombinedInstructions["before"]) => T;
    including: <T = S>(value: CombinedInstructions["including"]) => T;
    limitedTo: <T = S>(value: CombinedInstructions["limitedTo"]) => T;
    orderedBy: <T = S>(value: CombinedInstructions["orderedBy"]) => T;
    selecting: <T = S>(value: CombinedInstructions["selecting"]) => T;
    using: <T = S>(value: CombinedInstructions["using"]) => T;
    with: ReducedFunction & {
        <T = S>(options: CombinedInstructions["with"]): T;
        id: <T = S>(value: ResultRecord["id"]) => T;
        ronin: ReducedFunction & {
            createdAt: <T = S>(value: ResultRecord["ronin"]["createdAt"]) => T;
            createdBy: <T = S>(value: ResultRecord["ronin"]["createdBy"]) => T;
            updatedAt: <T = S>(value: ResultRecord["ronin"]["updatedAt"]) => T;
            updatedBy: <T = S>(value: ResultRecord["ronin"]["updatedBy"]) => T;
        };
        name: <T = S>(value: string) => T;
        email: <T = S>(value: string) => T;
    };
};
declare module "blade/types" {
    export type Account = ResultRecord & {
        email: string;
        name: string;
    };
    export type Accounts = Array<Account> & {
        moreBefore?: string;
        moreAfter?: string;
    };
}
declare module "blade/server/hooks" {
    declare const use: {
        /** Get a single account record */
        account: AccountSyntax<Account | null>;
        /** Get multiple account records */
        accounts: AccountSyntax<Accounts>;
    };
}
"
`;

exports[`generate a basic model with blob field 1`] = `
"import type { CombinedInstructions } from "blade-compiler";
import type { ReducedFunction, ResultRecord } from "blade-syntax/queries";
import type { StoredObject } from "blade-compiler";
export type Account = import("blade/types").Account;
export type Accounts = import("blade/types").Accounts;
type AccountSyntax<S> = ReducedFunction & {
    <T = S>(options?: Partial<CombinedInstructions>): T;
    after: <T = S>(value: CombinedInstructions["after"]) => T;
    before: <T = S>(value: CombinedInstructions["before"]) => T;
    including: <T = S>(value: CombinedInstructions["including"]) => T;
    limitedTo: <T = S>(value: CombinedInstructions["limitedTo"]) => T;
    orderedBy: <T = S>(value: CombinedInstructions["orderedBy"]) => T;
    selecting: <T = S>(value: CombinedInstructions["selecting"]) => T;
    using: <T = S>(value: CombinedInstructions["using"]) => T;
    with: ReducedFunction & {
        <T = S>(options: CombinedInstructions["with"]): T;
        id: <T = S>(value: ResultRecord["id"]) => T;
        ronin: ReducedFunction & {
            createdAt: <T = S>(value: ResultRecord["ronin"]["createdAt"]) => T;
            createdBy: <T = S>(value: ResultRecord["ronin"]["createdBy"]) => T;
            updatedAt: <T = S>(value: ResultRecord["ronin"]["updatedAt"]) => T;
            updatedBy: <T = S>(value: ResultRecord["ronin"]["updatedBy"]) => T;
        };
        name: <T = S>(value: string) => T;
        email: <T = S>(value: string) => T;
        image: <T = S>(value: StoredObject) => T;
    };
};
declare module "blade/types" {
    export type Account = ResultRecord & {
        email: string;
        image: StoredObject;
        name: string;
    };
    export type Accounts = Array<Account> & {
        moreBefore?: string;
        moreAfter?: string;
    };
}
declare module "blade/server/hooks" {
    declare const use: {
        /** Get a single account record */
        account: AccountSyntax<Account | null>;
        /** Get multiple account records */
        accounts: AccountSyntax<Accounts>;
    };
}
"
`;

exports[`generate with no models 1`] = `
"import type { CombinedInstructions } from "blade-compiler";
import type { ReducedFunction, ResultRecord } from "blade-syntax/queries";
declare module "blade/types" { }
declare module "blade/server/hooks" {
    declare const use: {};
}
"
`;
